Refactor player connection handling and update version to 0.9.18-alpha